# PW4MedSeg

./: .gitignore  LICENSE  README.md  main.py  preprocess_all.sh  pyproject.toml  requirements.txt  test.py  trainer.py
Data_preprocessing/: anisotropic2isotropic.py  label_thr.py  multi2one.py  point2gau.py
dataset/dataset_0/: dataset_mscmrseg_lv_cavity_correct.json  dataset_spleen_10_200.json
networks/: mySAblock.py  mytransformerblock.py  myvit.py  unetr.py
utils/: data_utils.py  data_utils_gau.py  loss.py
